Working with tests.

--- a/public/sandbox.html
+++ b/public/sandbox.html
@@ -2,12 +2,13 @@
   <head>
     <meta charset="utf-8">
     <title>Sandbox Mocha Tests</title>
-    <link href="/assets/mocha.css" rel="stylesheet" />
+    <link href="/assets/mocha/mocha.css" rel="stylesheet" />
   </head>
   <body>
     <div id="mocha"></div>
-    <script src="/assets/jquery.min.js"></script>
-    <script src="/assets/mocha.js"></script>
+    <script src="/assets/jquery/dist/jquery.min.js"></script>
+    <script src="/assets/mocha/mocha.js"></script>
+    <script src="/assets/expect.js/index.js"></script>
     <script src="/assets/sandbox.js"></script>
   </body>
 </html>
