Updated babel and bugfixes.

--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
     {{content-for "body"}}
 
     <script src="{{rootURL}}assets/vendor.js"></script>
-    <script src="assets/node_modules/babel-core/browser.js"></script>
+    <script src="assets/node_modules/babel-standalone/babel.min.js"></script>
     <script src="{{rootURL}}assets/workshop.js"></script>
 
     {{content-for "body-footer"}}
