--- a/public/sandbox.html
+++ b/public/sandbox.html
@@ -7,8 +7,10 @@
   <body>
     <div id="mocha"></div>
     <script src="assets/bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="assets/vendor/sinon-1.17.6.js"></script>
     <script src="assets/bower_components/mocha/mocha.js"></script>
-    <script src="assets/bower_components/expect.js/index.js"></script>
+    <script src="assets/bower_components/chai/chai.js"></script>
+    <script src="assets/bower_components/sinon-chai/lib/sinon-chai.js"></script>
     <script src="assets/sandbox.js"></script>
   </body>
 </html>
