--- a/app/index.html
+++ b/app/index.html
@@ -9,17 +9,17 @@
 
     {{content-for "head"}}
 
-    <link rel="stylesheet" href="{{rootURL}}assets/workshop.css">
-    <link rel="stylesheet" href="{{rootURL}}assets/vendor.css">
+    <link rel="stylesheet" href="assets/workshop.css">
+    <link rel="stylesheet" href="assets/vendor.css">
 
     {{content-for "head-footer"}}
   </head>
   <body>
     {{content-for "body"}}
 
-    <script src="{{rootURL}}assets/vendor.js"></script>
+    <script src="assets/vendor.js"></script>
     <script src="assets/node_modules/babel-standalone/babel.min.js"></script>
-    <script src="{{rootURL}}assets/workshop.js"></script>
+    <script src="assets/workshop.js"></script>
 
     {{content-for "body-footer"}}
   </body>
